# harekaze_server

./: .dockerignore  .gitignore  .mcp  CLAUDE.md  README.md  alembic.ini  hello.py  main.py  prompts.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: check-types.md
.claude/rules/: python-package-management.md  python-type-safety.md
.kiro/steering/: product.md  structure.md  tech.md
Docker/: Dockerfile.adminapi  Dockerfile.annotationapi  Dockerfile.appapi  build-to-ecr.sh
alembic/: env.py
alembic/versions/: 20260127_add_bloom_status_to_entire_trees.py
app/application/: exceptions.py
app/tools/: face_analyzer.py
docs/: bedrock-fullview-validation-cost.md
frontend/annotation-tool/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
master/: 260121_bloom_state.csv  flowering_date.csv  flowering_date_2025.csv  municipalities.csv  municipalities.json
migrations/: env.py
migrations/versions/: 00d871d2ed25_add_og_image_to_stem2.py  (+33 more)
query/: api_frequency.sql  count_long_processes.py
scripts/: check_deploy_status.sh  create_admin.py  create_annotator.py  deploy_annotation_front_dev.sh  deploy_annotation_front_prd.sh  deploy_dev.sh  deploy_prd.sh  load_test_create_tree.py  migrate_dev.sh  migrate_prd.sh  reset_prd.sh  tail_logs.sh  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  update_bloom_status.py  update_bloom_status_dev.sh  update_bloom_status_prd.sh
tests/: conftest.py  pytest.ini  test_entire_tree_bloom_columns.py  test_tree_version_column.py  test_tree_version_creation.py
(+170 files in other folders)
