[project]
name = "harekaze_server"
version = "0.1.0"
description = "桜の木の情報を管理するためのAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.37",
    "alembic==1.14.1",
    "mysqlclient==2.2.7",
    "opencv-python>=4.1.1",
    "python-multipart==0.0.20",
    "pillow==11.1.0",
    "python-jose==3.3.0",
    "boto3>=1.36.0",
    "pydantic==2.6.1",
    "python-dotenv==1.0.1",
    "GeoAlchemy2==0.17.0",
    "loguru>=0.7.3",
    "googlemaps>=4.10.0",
    "pymysql[rsa]>=1.1.1",
    "mysql-connector-python>=9.2.0",
    "jinja2>=3.1.5",
    "aioboto3==13.4.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
]
